# dimer

./: .gitignore  Cargo.toml  Makefile.toml
src/: cg.rs  dimer.rs  fourier.rs  lib.rs  options.rs  raw.rs  rotation.rs  test.rs  translation.rs
tests/: hcn.rs
tests/files/: HCN.json  HCN.xyz
