# [[file:dimer.note::17ae940c][17ae940c]]
[package]
name = "dimer"
version = "0.0.1"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
vecfx = {version="0.1", features=["nalgebra"]}
gut = {version="0.2.0", package="gchemol-gut"}
gosh = {version="0.1", features=["adhoc"]}
serde = {version="1", features = ["derive"]}
serde_json = "1"
envy = "0.4"

[dev-dependencies]

[features]
# for adhoc hacking
adhoc = []

# workspace independent
#[workspace]
# 17ae940c ends here
